deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw1-app
spec:
  selector:
    matchLabels:
      app: hw1-app
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hw1-app
    spec:
      containers:
        - image: if1nal/otus-hw1:v0.0.1
          name: hw1-app
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
